# stacked-seds

./: .flake8  .gitattributes  .gitignore  .readthedocs.yml  CONTRIBUTING.md  LICENSE  Makefile  README.md  create_test_data.py  debug_test.py  meta.yml  pyproject.toml  requirements.txt  setup.py  test_all.py  test_workflow.py
.github/workflows/: ci.yml  codeql.yml  docs.yml
config/: params.yml
docs/: Makefile  requirements.txt
docs/source/: changelog.rst  conf.py  configuration.rst  faq.rst  index.rst  installation.rst  quickstart.rst
docs/source/api/: photometry.rst  stacking.rst  tutorial.rst
src/: files_processor.py  image.py  image_processor.py  plot.py  plotter.py
stacked_seds/: __init__.py  photometry.py  plotting.py  stacking.py  utils.py
stacked_seds/scripts/: __init__.py  run_photometry.py  run_stacking.py
tests/: conftest.py  test_image.py  test_integration.py  test_photometry.py  test_plotting.py  test_stacking.py  test_utils.py
tests/data/: simple_test.fits  simple_test.reg  test_config.yml  test_image.fits  test_regions.reg  test_zeropoints.txt
tests/data/output/: test_image_NEW.fits
